--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".Activity_CriteriaList" />
         <activity android:name=".Activity_Timer" />
         <activity android:name=".Activity_About" />
+        <activity android:name=".Activity_Marker_Management" />
         <activity
             android:name=".Activity_Assessment"
             android:launchMode="singleTop" />
@@ -50,11 +51,6 @@
             android:name=".Activity_assessment_comment"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <meta-data
