--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.melnykov:floatingactionbutton:1.1.0'
+    implementation 'com.jpardogo.materialtabstrip:library:1.0.6'
     implementation 'com.android.support:gridlayout-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
     implementation files('libs/aa-poi-3.10-min-0.1.5.jar')
     implementation files('libs/aa-poi-ooxml-schemas-3.10-reduced-more-0.1.5.jar')
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:21.0.+'
 }
