--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".Activity_ShowComment_MarkAllocation" />
         <activity android:name=".Activity_SendReport_Individual" />
         <activity android:name=".Activity_Editable_Individual_Report" />
-        <activity android:name=".Activity_ReviewReport" />
+        <activity android:name=".Activity_Review_Report" />
         <activity android:name=".Activity_Reaper_Mark"
             android:launchMode="singleTask"/>
         <activity android:name=".Activity_Realtime_Assessment" />
