--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:21.0.+'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
