--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,10 @@
         <activity
             android:name=".Activity_Homepage"
             android:launchMode="singleTask" />
-        <activity android:name=".Activity_MarkAllocation" />
-        <activity android:name=".Activity_CriteriaList" />
-        <activity android:name=".Activity_Timer" />
+        <activity android:name=".Activity_Mark_Allocation" />
+        <activity android:name=".Activity_Criteria" />
         <activity android:name=".Activity_About" />
+        <activity android:name=".Activity_About_New" />
         <activity android:name=".Activity_Marker_Management" />
         <activity
             android:name=".Activity_Assessment"
@@ -37,8 +37,8 @@
         <activity
             android:name=".Activity_Assessment_Preparation"
             android:launchMode="singleTask" />
-        <activity android:name=".Activity_SignUp" />
-        <activity android:name=".Activity_Student_Group" />
+        <activity android:name=".Activity_Signup" />
+        <activity android:name=".Activity_Student_Management" />
 
         <activity android:name=".Activity_Login"
             android:label="@string/app_name"
